# Option-Pricer

./: .gitignore  CMakeLists.txt  main.cpp
include/: control.h  products.hpp
src/: control.cpp
